Controls and counter to the top to avoid overlap in mobile; program runs on load as per fCC User Stories

--- a/src/styles/_controls.scss
+++ b/src/styles/_controls.scss
@@ -2,7 +2,7 @@
 
 .controls {
   float: left;
-  margin-top: 3px;
+  margin-bottom: 3px;
 
   button {
     background: $dark-general;
@@ -11,7 +11,7 @@
     color: $light-text;
     font-family: 'Raleway', sans-serif;
     margin-right: 3px;
-    margin-top: 0;
+    margin-bottom: 0;
     padding: 7px;
 
     &:hover {
