--- a/src/styles/_generations.scss
+++ b/src/styles/_generations.scss
@@ -7,6 +7,6 @@
   color: $light-text;
   font-family: 'Raleway', sans-serif;
   float: right;
-  margin-top: 3px;
+  margin-bottom: 3px;
   padding: 7px;
 }
